// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ErrorStatus should be correct if an error status should be displayed 1`] = `
Object {
  "message": undefined,
  "open": true,
}
`;

exports[`components/ErrorStatus should be correct if an error status should not be displayed 1`] = `
Object {
  "message": undefined,
  "open": false,
}
`;
